FEM-3056 alignment fixed for the container

--- a/htmls/src/styles/components/_access.scss
+++ b/htmls/src/styles/components/_access.scss
@@ -26,7 +26,6 @@
                     display: flex;
                     padding: 0rem 1.25rem;
                     align-items: center;
-                    gap: 5rem;
                     align-self: stretch;
                 }
             }
@@ -107,7 +106,6 @@
                 .access-contact-container {
                     .access-contact-item {
                         align-items: start;
-                        gap: 0rem;
                     }
                 }
             }
